Fix .truncate (closes GH-2407)

--- a/src/sentry/static/sentry/less/misc.less
+++ b/src/sentry/static/sentry/less/misc.less
@@ -13,6 +13,7 @@ img {
 	display: block;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .bordered-column {
